# tinyx

./: configure-eclipse.sh  configure.ac  crt0_no_tls.c  crt0_start.S
Xext/: xf86bigfont.c
dix/: Makefile.am  dixfonts.c  main.c
include/: dix-config.h.in
kdrive/: Makefile.am
kdrive/fbdev/: Makefile.am  fbdev.c
kdrive/linux/: keyboard.c  linux.c
kdrive/minimal/: Makefile  Makefile.am  Makefile.in  minimal.c  minimal_keyboard.c  minimal_mouse.c
kdrive/src/: kinput.c
os/: access.c  connection.c  utils.c  xauembed.c
